# learning-rust

enums/src/: main.rs
generic_trait_lifetime/src/: lib.rs  main.rs
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
structure/src/: main.rs
variables/src/: main.rs
web-sockets/: Cargo.toml
web-sockets/src/: main.rs
