[package]
name = "web-sockets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # 一个异步运行时，允许我们编写高性能的异步代码。
tokio-tungstenite = "0.15"                     # 提供基于 Tokio 的 WebSocket 支持，方便我们创建 WebSocket 客户端和服务器。
futures = "0.3"                               # 提供抽象的异步编程工具，简化异步操作的处理。
log = "0.4"                                    # 日志库，用于记录程序运行日志。
env_logger = "0.9"                             # 方便地初始化日志记录器，方便我们配置日志输出。
